# MineCombat-Evaluation

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_eval.py  run_suite.py
.github/workflows/: release.yml
artifacts/: README.md  manifest.json
assets/: branding-prompts.md
benchmarks/: generate_l1_grid.py  generate_l2_config.py  generate_l2_suites.py
benchmarks/l1-v1/: README.md
benchmarks/l1-v1/tasks/: creeper_iron_full_night.json  (+5 more)
benchmarks/l2-cave-v1/: suite.json
benchmarks/l2-v0/: README.md
docker/: Dockerfile  entrypoint.sh
docs/: policy-porting.md
examples/: task_spec_multi_mob.json  task_spec_skeleton.json
examples/custom_policy/: README.md  __init__.py  conditional_policy.py  scripted_policy.py  torch_policy.py
minecombat_eval/: __init__.py  agents.py  bootstrap.py  cli.py  connector.py  env.py  helpers.py  java.py  loader.py  models.py  policy.py  reference_policy.py  runner.py  scaffold.py  suite.py  synthetic.py
minecombat_eval/data/: config.yml
paper/: whitepaper.md
paper-plugin/: build.gradle  gradle.properties  settings.gradle
planning/: agent-integration.md  benchmark-cards.md  benchmark-suites.md  commands-and-scenarios.md  important.md  initial.md  mvp1.md  observation-v1.md  protocol-v1.md  research-ready-plan.md  run-benchmark.md  tasks.md  world-setup.md
planning/ground_truths/: positions.md
scripts/: bootstrap.sh  export-world.sh  run-gradle.sh  run-paper.sh  scripts.md  summarize_results.py  sync-config.sh  sync-package-data.sh
server/: server.properties.example
(+49 files in other folders)
