[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecombat-eval"
version = "0.3.0"
description = "TCP client and bootstrap tooling for MineCombat-Evaluation (Minecraft combat benchmarks)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MineCombat-Evaluation contributors" }]
keywords = ["minecraft", "benchmark", "evaluation", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
minecombat-eval = "minecombat_eval.cli:main"

[project.urls]
Repository = "https://github.com/SamC1249/MineCombat-Evaluation"

[tool.setuptools.packages.find]
where = ["."]
include = ["minecombat_eval*"]

[tool.setuptools.package-data]
minecombat_eval = [
    "data/*",
    "data/plugin/*.jar",
    "data/benchmarks/**/*.json",
]
